--- a/BA.html
+++ b/BA.html
@@ -37,10 +37,13 @@
 
     <!--Header-->
     <header>
-        <nav class="navbar navbar-default navbar-fixed white no-background bootsnav">
+        <nav class="navbar navbar-default navbar-fixed no-background bootsnav">
             <!-- <div class="container"> -->
             <div class="header">
                 <div class="navbar-header">
+                        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-menu">
+                                <i class="fa fa-bars"></i>
+                              </button>
                     <a class="navbar-brand" href="#">
                         <img src="images/IBM_ICE.jpg" alt="Logo" style="width: 200px !important;"
                             class="logo logo-display">
