--- a/index.html
+++ b/index.html
@@ -89,13 +89,13 @@
   <!-- <div id="main"> -->
   <!--Header-->
   <header>
-    <nav class="navbar navbar-default navbar-fixed white no-background bootsnav">
+    <nav class="navbar navbar-default navbar-fixed no-background bootsnav">
       <!-- <div class="container"> -->
       <div class="header">
         <div class="navbar-header">
-          <!-- <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-menu">
+          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-menu">
             <i class="fa fa-bars"></i>
-          </button> -->
+          </button>
           <a class="navbar-brand" href="#">
             <img src="images/IBM_ICE.jpg" alt="Logo" style="width: 200px !important;" class="logo logo-display">
             <img src="images/IBM_ICE.jpg" style="width: 180px !important;" class="logo logo-scrolled" alt="Logo">
