--- a/artificial.html
+++ b/artificial.html
@@ -37,13 +37,13 @@
 
     <!--Header-->
     <header>
-        <nav class="navbar navbar-default navbar-fixed no-background bootsnav">
+        <nav class="navbar navbar-default navbar-fixed white no-background bootsnav">
             <!-- <div class="container"> -->
             <div class="header">
                 <div class="navbar-header">
-                        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-menu">
+                    <!-- <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-menu">
                                 <i class="fa fa-bars"></i>
-                              </button>
+                              </button> -->
                     <a class="navbar-brand" href="#">
                         <img src="images/IBM_ICE.jpg" alt="Logo" style="width: 200px !important;"
                             class="logo logo-display">
@@ -74,9 +74,9 @@
             </div>
         </nav>
 
-        <!-- <div class="navbar-fixed-top main-menu-continer menutop">
+        <div class="navbar-fixed-top main-menu-continer menutop">
             <button type="button" class="btn menubar-toggle styl" onmouseover="openNav()">
-                <!-- <i class="fa fa-bars"></i> --Menu
+                <!-- <i class="fa fa-bars"></i> -->Menu
             </button>
 
             <div id="mySidenav" class="sidenav">
@@ -126,7 +126,7 @@
                     <hr>
                 </ul>
             </div>
-        </div> -->
+        </div>
     </header>
 
     <!--Slider-->
@@ -175,8 +175,8 @@
                         <div class="wrap">
                             <iframe width="100%" height="250" src="https://www.youtube.com/embed/tgbNymZ7vqY"></iframe>
                             <!-- <iframe width="100%" height="315" src="video/Block_chain.mp4"></iframe> -->
-                            <!-- <h1>Blockchain</h1> -->
-                            <!-- <iframe src="https://player.vimeo.com/video/55806355" width="100%" height="360" frameborder="0"
+    <!-- <h1>Blockchain</h1> -->
+    <!-- <iframe src="https://player.vimeo.com/video/55806355" width="100%" height="360" frameborder="0"
 								webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe> --
                         </div>
                     </div>
@@ -190,22 +190,22 @@
         <div class="container">
             <h2 class="heading bottom25">Market Trends and Projections<span class="divider-left"></span></h2>
             <div class="row">
-                <div class="col-md-5 bottom15">
+                <div class="col-md-6 bottom15" style="background-color: #dcdfec;border-radius: 4px;"><br>
                     <p class="half_space text-justify">There is a huge demand for Artificial Intelligence/Machine
                         Learning professionals from private and public sectors. The global market is forecasted
                         to grow to 103 billion U.S. dollars by 2027, more than double its expected market size
                         in 2018. With a share of 45 percent, the software segment would become the large market
                         segment by 2027.
-                    </p><br>
+                    </p><br><br>
                     <h4 class="siz">Salary Trends</h4>
                     <p class="text-justify">The hike in this sector for the current year is projected to go upto INR
                         50lpa<p>
                             <ul class="ulpad">
                                 <li>Globally average salary will be $130k per annum</li>
                                 <li>The median salary in India is INR 14.3 Lakhs across all skill sets</li>
-                            </ul>
+                            </ul><br>
                 </div>
-                <div class="col-md-7">
+                <div class="col-md-6">
                     <img class="img-responsive" src="images/AIML/market-graph.png" alt="graph">
                 </div>
             </div>
@@ -225,18 +225,18 @@
                     </p>
                 </div>
             </div><br>
-                <div class="row">
-                    <div class="col-md-12">
-                        <h3 class="heading bottom25">Global Skill Gap<span class="divider-left"></span></h3>
-                        <p class="text-justify">
-                            According to Sector Skills Council chief executive, The demand-supply gap for skills affected
-                            the industry's performance in 2018, due to shortage of 140,000 skilled techies for 500,000 jobs
-                            in the industry across verticals.
-                            "Going forward, the industry will face a shortage of 230,000 skilled techies as jobs in AI and
-                            Big Data are estimated to be 780,000 by 2021,"
-                        </p>
-                    </div>
+            <div class="row">
+                <div class="col-md-12">
+                    <h3 class="heading bottom25">Global Skill Gap<span class="divider-left"></span></h3>
+                    <p class="text-justify">
+                        According to Sector Skills Council chief executive, The demand-supply gap for skills affected
+                        the industry's performance in 2018, due to shortage of 140,000 skilled techies for 500,000 jobs
+                        in the industry across verticals.
+                        "Going forward, the industry will face a shortage of 230,000 skilled techies as jobs in AI and
+                        Big Data are estimated to be 780,000 by 2021,"
+                    </p>
                 </div>
+            </div>
         </div>
     </section>
 
@@ -246,7 +246,7 @@
                 <div class="col-md-6">
                     <img class="img-responsive" src="images/AIML/skills.jpg" alt="skils">
                 </div>
-                <div class="col-md-6">
+                <div class="col-md-6" style="background-color: skyblue;border-radius: 4px;">
                     <div class="item" style="padding-top: 7px;">
                         <h4 class="siz">Job Roles</h4>
                         <ul class="ulpad">
@@ -258,7 +258,7 @@
                             <li>AI/ML Lead</li>
                         </ul>
                     </div><br>
-                    <div class="item">
+                    <div class="item" style="margin-bottom: 8px;">
                         <h4 class="siz">Skills Required</h4>
                         <ul class="ulpad">
                             <li>Programming</li>
@@ -302,7 +302,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
-                    <h2 class="heading bottom25">Artificial Intelligence/Machine Learning Overview<span class="divider-left"></span></h2>
+                    <h2 class="heading bottom25">Artificial Intelligence/Machine Learning Overview<span
+                            class="divider-left"></span></h2>
                     <p class="half_space text-justify">This course helps to gain knowledge on how
                         artificial intelligence makes it possible for machines to learn from experience, adjust to new
                         inputs and perform human-like tasks. The audience will learn about the technologies like machine
@@ -393,10 +394,10 @@
             <div class="row">
                 <div class="col-md-12">
                     <h2 class="heading heading_space bottom25">Artificial Intelligence/Machine Learning Outcome<span
-                        class="divider-left"></span>
+                            class="divider-left"></span>
                     </h2>
                     <p class="half_space text-justify">This course helps to gain knowledge on how
-                        artificial intelligence makes 
+                        artificial intelligence makes
                     </p>
                 </div>
             </div>
@@ -441,8 +442,8 @@
     <!-- register float -->
     <!-- <button class="open-button"><a  href="http://localhost/csp/register.php">Click to Register</a></button> -->
     <button class="top-right">
-            <a href="">Register here</a>
-           </button>
+        <a href="">Register here</a>
+    </button>
 
     <!--FOOTER-->
     <footer>
@@ -485,7 +486,8 @@
         // });
 
         // navbar icon
-
+        document.getElementById("mySidenav").addEventListener("mouseover", openNav);
+        document.getElementById("mySidenav").addEventListener("mouseout", closeNav);
         function openNav() {
             document.getElementById("mySidenav").style.display = "block";
         }
