--- a/index.html
+++ b/index.html
@@ -37,12 +37,12 @@
 
   
 
-  <!-- <div class="navbar-fixed-top main-menu-continer menutop">
+  <div class="navbar-fixed-top main-menu-continer menutop">
       <button type="button" class="btn menubar-toggle styl" onmouseover="openNav()">
-      <!-- <i class="fa fa-bars"></i>  onmouseout="closeNav()" --Menu
+      <!-- <i class="fa fa-bars"></i>  onmouseout="closeNav()" -->Menu
     </button>
 
-    <div id="mySidenav" class="sidenav">
+    <div id="mySidenav" class="sidenav displaynone">
       <ul>
         <li><a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a></li>
         <li>
@@ -84,7 +84,7 @@
         <hr>
       </ul>
     </div>
-  </div> -->
+  </div>
 
   <!-- <div id="main"> -->
   <!--Header-->
@@ -93,9 +93,9 @@
       <!-- <div class="container"> -->
       <div class="header">
         <div class="navbar-header">
-          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-menu">
+          <!-- <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-menu">
             <i class="fa fa-bars"></i>
-          </button>
+          </button> -->
           <a class="navbar-brand" href="#">
             <img src="images/IBM_ICE.jpg" alt="Logo" style="width: 200px !important;" class="logo logo-display">
             <img src="images/IBM_ICE.jpg" style="width: 180px !important;" class="logo logo-scrolled" alt="Logo">
@@ -108,7 +108,7 @@
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown">Specializations</a>
               <ul class="dropdown-menu">
-                <li><a href="artificial.html">Artificial Intelligence</a></li>
+                <li><a href="aiml.html">Artificial Intelligence</a></li>
                 <li><a href="blockchain.html">Blockchain</a></li>
                 <li><a href="BA.html">Business Analytics</a></li>
                 <li><a href="cybersecu.html">Cyber Security</a></li>
@@ -132,7 +132,7 @@
     <div id="rev_slider" class="rev_slider" data-version="5.0">
       <ul>
         <!-- SLIDE  -->
-        <li data-transition="fade" data-delay="2000" >
+        <li data-transition="fade" data-delay="2500" >
           <!-- MAIN IMAGE -->
           <img id="banner1" src="images/banner/banner1.jpg" alt="banner" data-bgposition="center center" data-bgfit="cover" data-bgparallax="10"
             class="rev-slidebg" >
@@ -315,15 +315,16 @@
           </li> -->
       </ul>
     </div><!-- END REVOLUTION SLIDER -->
-  </section><br>
+  </section>
 
   <!-- <div id="main"> -->
-<div class="container">
+<div class="">
   <!--ABout US-->
   <section id="ibm">
-    <div class="container margin10">
+    <div class=" ">
       <div class="row">
         <div class="col-md-6">
+          <div class="margin10" style="margin-left: 70px;">
           <h2 class="heading bottom25">About IBM<span class="divider-left"></span></h2>
           <!-- <ul>
             <li><i class="design fa fa-hand-o-right"></i>IBM is a global technology and innovation company headquartered
@@ -338,27 +339,55 @@
               today, we are a cognitive solutions and cloud platform company, transforming entire industries</li>
           </ul> -->
           <p class="text-justify">IBM is a global technology and innovation company headquartered in Armonk, NY. Started
+              in 1911. A century of innovation - One of only 2 companies to remain in the top 25 Industrial companies
+              since 1900. In 2017, IBM’s Revenue was USD 79.1 billion revenue (Cloud- USD 17 Billion). We live at the
+              intersection of business and technology and today, we are a cognitive solutions and cloud platform company,
+              transforming entire industries.</p>
+          <p class="text-justify half_space">The IBM Innovation Centre for Education collaborates with
+              universities to co-create degrees that let industry professionals and students interact and prepare for
+              solving the problems of tomorrow. IBM works with its partner ecosystem as well as thousands of clients
+              worldwide to understand the skills needed by working professionals in their organizations. The IBM ICE
+              initiative aims to leverage the proven academic excellence of the existing university degree (i.e.,
+              developed scientific course content, attained academic accreditations, student attraction, faculty retention
+              and local community support) and augment the degree with specific industry and/or technology specializations
+              by bridging the gap between academia and industry. Together, this will impart outstanding industry-grade
+              skills to our young students and will help them prepare for any challenges that the Smarter Planet will
+              bring to them in their exciting careers ahead.
+            </p> 
+          </div>
+          <!-- <p class="text-justify">IBM is a global technology and innovation company headquartered in Armonk, NY. Started
             in 1911. A century of innovation - One of only 2 companies to remain in the top 25 Industrial companies
             since 1900. In 2017, IBM’s Revenue was USD 79.1 billion revenue (Cloud- USD 17 Billion). We live at the
             intersection of business and technology and today, we are a cognitive solutions and cloud platform company,
-            transforming entire industries.</p>
-
+            transforming entire industries.</p> -->
+            <!-- <p class="text-justify margin10 half_space">The IBM Innovation Centre for Education collaborates with
+                universities to co-create degrees that let industry professionals and students interact and prepare for
+                solving the problems of tomorrow. IBM works with its partner ecosystem as well as thousands of clients
+                worldwide to understand the skills needed by working professionals in their organizations. The IBM ICE
+                initiative aims to leverage the proven academic excellence of the existing university degree (i.e.,
+                developed scientific course content, attained academic accreditations, student attraction, faculty retention
+                and local community support) and augment the degree with specific industry and/or technology specializations
+                by bridging the gap between academia and industry. Together, this will impart outstanding industry-grade
+                skills to our young students and will help them prepare for any challenges that the Smarter Planet will
+                bring to them in their exciting careers ahead.
+              </p> -->
         </div>
         <div class="col-md-6">
-          <div class="wrap">
+          <img class="img-responsive" src="images/IBM.jpg">
+          <!-- <div class="wrap">
             <iframe width="100%" autoplay="true" height="250" src="https://www.youtube.com/embed/tgbNymZ7vqY"></iframe>
             <!-- <iframe width="100%" height="315" src="video/Block_chain.mp4"></iframe> -->
             <!-- <h1>Blockchain</h1> -->
             <!-- <iframe src="https://player.vimeo.com/video/55806355" width="100%" height="360" frameborder="0"
-  webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe> -->
-          </div>
+  webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe> --
+          </div> -->
         </div>
       </div>
     </div>
   </section>
   <!--ABout US-->
 
-  <section>
+  <!-- <section>
     <div class="container">
       <div class="row">
         <div class="col-md-12">
@@ -376,14 +405,17 @@
         </div>
       </div>
     </div>
-  </section>
+  </section> -->
 
   <!--ASAP-->
   <section id="asap" class="bottom25">
-    <div class="container margin10">
+    <div class="">
       <div class="row">
-        <div class="col-md-12 priorty">
-          <h2 class="heading bottom25">About Additional Skill Aquisition Program<span class="divider-left"></span></h2>
+        <div class="col-md-6">
+          <img class="img-responsive" src="images/kerala_uni1.jpeg">
+        </div>
+        <div class="col-md-6 priorty" style="margin-left: inherit;">
+          <h2 class="heading bottom25"><br>About Additional Skill Aquisition Program<span class="divider-left"></span></h2>
           <p class="text-justify margin10 half_space">In the year 2012, the State Skill Development Project (SSDP) was
             enacted to address the concern of the growing educated-unemployment rates of the State. SSDP involves the
             participation of industries and training partners to execute the project ASAP (Additional Skill Acquisition
@@ -405,11 +437,12 @@
   </section>
 
   <!--collaboration-->
-  <section id="coll" class="bottom25">
-    <div class="container margin10">
+  <section id="coll" class="">
+    <div class="">
       <div class="row">
-        <div class="col-md-12 priorty">
-          <h2 class="heading bottom25">IBM and ASAP Collaboration – CSP Kalamassery<span class="divider-left"></span>
+        <div class="col-md-6 priorty">
+          <div  style="margin-left: 70px;">
+         <center> <h2 class="heading bottom25">IBM and ASAP Collaboration – CSP Kalamassery<span class="divider-left"></span>
           </h2>
           <p class="text-justify margin10 half_space">A ASAP has identified the need to tie up with a well-recognized
             organization, whose skill development methodologies, tools and capabilities are proven, whose certification
@@ -427,8 +460,11 @@
             identified technology areas such as Data Science, Business Analytics, Internet of Things (IOT), Cyber
             Security, Blockchain and Artificial Intelligence & Machine Learning (AI/ML) which provide large employment
             opportunities in the area.
-          </p>
-
+          </p></center>
+          </div>  
+        </div>
+        <div class="col-md-6">
+          <img class="img-responsive" src="images/kerala_uni3.jpeg">
         </div>
       </div>
     </div>
@@ -882,7 +918,8 @@
     });
 
     // navbar icon
-
+    document.getElementById("mySidenav").onmouseover = function() {openNav()};
+        document.getElementById("mySidenav").onmouseout = function() {closeNav()};
     function openNav() {
       document.getElementById("mySidenav").style.display = "block";
     }
