--- a/certificate.html
+++ b/certificate.html
@@ -37,7 +37,7 @@
 
     <!--Header-->
     <header>
-        <nav class="navbar navbar-default navbar-fixed no-background bootsnav">
+        <nav class="navbar navbar-default navbar-fixed white no-background bootsnav">
             <!-- <div class="container"> -->
             <div class="header">
                 <div class="navbar-header">
@@ -137,7 +137,7 @@
                 <!-- SLIDE  -->
                 <li data-transition="fade">
                     <!-- MAIN IMAGE -->
-                    <img src="images/banner_2.png" alt="" data-bgposition="center center" data-bgfit="cover"
+                    <img src="images/certification_banner.jpg" alt="" data-bgposition="center center" data-bgfit="cover"
                         data-bgparallax="10" class="rev-slidebg">
                     <!-- LAYER NR. 1 -->
                     <div class="tp-caption tp-resizeme" data-x="['center','center','center','center']"
