--- a/artificial.html
+++ b/artificial.html
@@ -79,7 +79,7 @@
                 <!-- <i class="fa fa-bars"></i> -->Menu
             </button>
 
-            <div id="mySidenav" class="sidenav">
+            <div id="mySidenav" class="sidenav displaynone">
                 <ul>
                     <li><a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a></li>
                     <li>
@@ -190,7 +190,8 @@
         <div class="container">
             <h2 class="heading bottom25">Market Trends and Projections<span class="divider-left"></span></h2>
             <div class="row">
-                <div class="col-md-6 bottom15" style="background-color: #dcdfec;border-radius: 4px;"><br>
+                <!-- <div class="col-md-6 bottom15" style="background-color: #dcdfec;border-radius: 4px;"><br> -->
+                    <div class="col-md-6 bottom15">
                     <p class="half_space text-justify">There is a huge demand for Artificial Intelligence/Machine
                         Learning professionals from private and public sectors. The global market is forecasted
                         to grow to 103 billion U.S. dollars by 2027, more than double its expected market size
@@ -246,7 +247,8 @@
                 <div class="col-md-6">
                     <img class="img-responsive" src="images/AIML/skills.jpg" alt="skils">
                 </div>
-                <div class="col-md-6" style="background-color: skyblue;border-radius: 4px;">
+                <!-- <div class="col-md-6" style="background-color: skyblue;border-radius: 4px;"> -->
+                        <div class="col-md-6">
                     <div class="item" style="padding-top: 7px;">
                         <h4 class="siz">Job Roles</h4>
                         <ul class="ulpad">
